# gtkterm2

./: .gitignore  ChangeLog  GTKTerm.glade  GTKTerm.gladep  GTKTerm.prj  GTKTerm.pws  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  setup-gettext
debian/: README.Debian  README.source  changelog  control  copyright  gtkterm2.postinst  gtkterm2.prerm  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  GTKTerm.pot  Makefile.in  POTFILES.in  de.gmo  de.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  main.c  prefs.c  prefs.h  support.c
