## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gtkterm_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

gtkterm_pixmaps_DATA = \
	gtkterm.png

EXTRA_DIST = $(gtkterm_pixmaps_DATA)
