## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GTK_CFLAGS)

gtkterm2_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gtkterm2

gtkterm2_SOURCES = \
	callbacks.c\
	callbacks.h\
	interface.c\
	interface.h\
	main.c\
	support.c\
	support.h\
	prefs.c\
	prefs.h

gtkterm2_LDFLAGS = 

gtkterm2_LDADD =  \
	$(GTK_LIBS)

